--- a/src/components/Add/Form/Form.css
+++ b/src/components/Add/Form/Form.css
@@ -7,43 +7,43 @@
 }
 
 .add-form {
-  width: 70%;
+  max-width: 80%;
   margin: 30px auto;
-  background-color: #282828;
+  background-color: #FFFFFF;
   font-family: 'Rajdhani', sans-serif;
   font-size: 1rem;
-  color: #ffffff;
+  color: #00000;
+  border: 1px solid #A9A9A9;
 }
 
 @media screen and (max-width: 960px) {
   .add-form {
-    width: 100%;
+    max-width: 100%;
   }
 }
 
 .add-form__title {
   font-size: 2rem;
   text-align: center;
-  padding-top: 50px;
+  padding-top: 30px;
 }
 
-.add-form__fieldset {
+.add-form__fieldset--basic {
   border: none;
+  padding: 20px;
+  margin-right: 10px;
 }
 
-.add-form__fieldset-basic {
-  margin: 50px;
-}
-
-.add-form__fieldset-offers {
-  border: 1px solid grey;
+.add-form__fieldset--offers {
+  border: 1px solid #A9A9A9;
   border-radius: 5px;
   position: relative;
   margin: 30px;
   padding: 20px;
+  padding-bottom: 40px;
 }
 
-.add-form__fieldset-offers::before {
+.add-form__fieldset--offers::before {
   content: '';
   text-align: center;
   position: absolute;
@@ -57,7 +57,7 @@
   background-color: #fdde6b;
 }
 
-.add-form__fieldset-offers::after {
+.add-form__fieldset--offers::after {
   font-family: FontAwesome;
   content: "\f291";
   font-size: 45px;
@@ -68,109 +68,44 @@
   transform: translateX(-50%);
 }
 
-.add-form__fieldset-about {
-  background-color: #dab413;
+.add-form__fieldset--about {
+  background-color: #FDDE6B;
   padding: 20px 50px;
   color: #282828;
-}
-
-.add-form__fieldset-item {
-  display: flex;
-  align-items: flex-end;
-  justify-content: space-between;
-  margin-bottom: 10px;
-}
-
-.add-form__fieldset-basic-item {
-  display: flex;
-  justify-content: flex-end;
-  padding: 15px 0;
-}
-
-@media screen and (max-width: 640px) {
-  .add-form__fieldset-about-item {
-    display: block;
-  }
+  border: none;
 }
 
 .add-form__fieldset-title {
   font-size: 1.20rem;
-  margin: 50px 0;
+  margin-top: 50px;
   text-align: center;
 }
 
-.add-form__input {
-  margin-top: 10px;
-  background-color: #221e1d;
-  position: relative;
+.add-form__fieldset-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: flex-end;
 }
 
-.add-form__input--yellow {
-  background-color: #B4930E;
-  margin-right: 5px;
+.add-form__fieldset-wrapper--basic {
+  display: flex;
+  justify-content: flex-end;
 }
 
-.add-form__input--XS {
-  max-width: 15%;
-  min-width: 15%;
-  height: 30px;
-  position: relative;
-  border: 1px solid #fdde6b;
+.add-form__fieldset-item--basic {
+  padding: 20px;
 }
 
-.add-form__input--S {
-  height: 30px;
-  margin-bottom: 10px;
+.add-form__fieldset-item--textarea {
+  flex-grow: 3;
+  padding-top: 20px;
 }
 
-.add-form__input--M {
-  width: 40%;
-  height: 30px;
-  border: 1px solid #fdde6b;
-}
-
-.add-form__input--L {
-  min-width: 60%;
-  max-width: 60%;
-  height: 100px;
-}
-
-.add-form__input--XL {
-  min-width: 80%;
-  max-width: 80%;
-  height: 150px;
-  margin-right: 5px;
-  border: 1px solid #fdde6b;
-}
-
-.add-form__input--error {
-  border: 1px solid #81378e;
-}
-
-.add-form__label {
-  margin: 10px;
-}
-
-.add-form__label--hidden {
-  position: absolute;
-  left: -999em;
-}
-
-.add-form__submit {
-  min-width: 30%;
-  max-width: 30%;
-  height: 60px;
-  background-color: #24313c;
-  border: none;
-  color: #ffffff;
-  padding: 10px;
-  margin-top: 10px;
-  font-size: 1.2rem;
-}
-
-.add-form__submit:hover {
- cursor: pointer;
- transform: scale(0.9);
+.add-form__fieldset-item--button {
+    align-self: center;
+    flex-grow: 2;
+    margin-top: 60px;
 }
 
 .add-form__caption {
@@ -178,4 +113,88 @@
   color: #24313c;
   margin-right: 10px;
   margin-top: 10px;
+}
+
+/* Inputs Styles */
+
+.add-form__label {
+  position: relative;
+}
+
+.add-form__label--hidden {
+  position: absolute;
+  left: -9999px;
+}
+
+.add-form__input {
+  color: inherit;
+  padding: 10px;
+  margin-top: 10px;
+  background-color: #E0E0E0;
+  border: none;
+}
+
+.add-form__input--yellow {
+  background-color: #FEECA5;
+  border: none;
+}
+
+.add-form__input--XL {
+  height: 150px;
+  width: 90%;
+  margin-bottom: -10px;
+}
+
+.add-form__input--XL::placeholder {
+  text-align: center;
+  padding: 50px 0;
+}
+
+.add-form__input--L {
+  height: 150px;
+  width: 500px;
+  margin-bottom: -10px;
+}
+
+.add-form__input--M {
+  width: 400px;
+  margin-left: 10px;
+}
+
+.add-form__input--S {
+  width: 250px;
+}
+
+.add-form__input--XS {
+  width: 150px;
+}
+
+.add-form__input--XS::placeholder {
+  text-align: right;
+}
+
+.add-form__error-message {
+  position: absolute;
+  bottom: -30px;
+  right: 0;
+  font-size: 1rem;
+  color: red;
+}
+
+/* Button Styles */
+
+.add-form__submit {
+  height: 60px;
+  width: 200px;
+  background-color: #24313c;
+  border: none;
+  color: #ffffff;
+  padding: 20px;
+  font-size: 1.2rem;
+  transition: all 0.2s ease-out;
+}
+
+.add-form__submit:hover {
+ cursor: pointer;
+ transform: scale(0.9);
 }
