FE - Walidacja pól ofert (#63)
* PRODPFIP-115 Add logic to set price field required after filling the offer description

* PRODPFIP-115 styles and translations fixes

* PRODPFIP-115 Fix bugs

* PRODPFIP-175 Bug - raz wyłączona blokada opisu usługi nie włącza się ponownie

* PRODPFIP-175 Bug - Fix spelling in a method name

--- a/src/components/UI/OfferTextarea/OfferTextarea.css
+++ b/src/components/UI/OfferTextarea/OfferTextarea.css
@@ -24,6 +24,7 @@
 .add-form__input--disabled {
   background-color: #FFFFFF;
   border: 1px solid #D0D0D0;
+  color: #D0D0D0;
 }
 
 .add-form__input--disabled::placeholder {
@@ -34,5 +35,6 @@
   position: absolute;
   bottom: -30px;
   right: 0;
-  font-size: 1rem;
+  font-size: 0.75rem;
+  color: red;
 }
