--- a/src/components/UI/PriceInput/PriceInput.css
+++ b/src/components/UI/PriceInput/PriceInput.css
@@ -26,6 +26,7 @@
 .add-form__input--disabled {
   background-color: #FFFFFF;
   border: 1px solid #D0D0D0;
+  color: #D0D0D0;
 }
 
 .add-form__input--disabled::placeholder {
@@ -34,8 +35,8 @@
 
 .add-form__error-message {
   position: absolute;
-  bottom: -30px;
+  bottom: -35px;
   right: 0;
-  font-size: 1rem;
+  font-size: 0.75rem;
   color: red;
 }
