--- a/src/components/Add/Form/Form.css
+++ b/src/components/Add/Form/Form.css
@@ -26,9 +26,6 @@
   font-size: 1.75rem;
   text-align: center;
   padding-top: 30px;
-  /* margin-top: 30px;
-  margin-bottom: 30px;
-  text-align: center; */
 }
 
 .add-form__fieldset--basic {
@@ -61,12 +58,12 @@
 }
 
 .add-form__fieldset--offers::after {
-  font-family: FontAwesome;
-  content: "\f291";
-  font-size: 45px;
+  font-family: Pacifico, serif;
+  content: "Sm";
+  font-size: 2rem;
   color: #221e1d;
   position: absolute;
-  top: -25px;
+  top: -30px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -123,77 +120,14 @@
 
 /* Inputs Styles */
 
-.add-form__label {
-  position: relative;
-}
-
-.add-form__label--hidden {
-  position: absolute;
-  left: -9999px;
-}
-
-.add-form__input {
-  color: inherit;
-  padding: 10px;
-  margin-top: 10px;
-  background-color: #E0E0E0;
-  border: none;
-}
-
-.add-form__input--yellow {
-  background-color: #FEECA5;
-  border: none;
-}
-
-.add-form__input--XL {
-  height: 150px;
-  width: 90%;
-  margin-bottom: -10px;
-}
-
-.add-form__input--XL::placeholder {
-  text-align: center;
-  padding: 50px 0;
-}
-
-.add-form__input--L {
-  height: 150px;
-  width: 500px;
-  margin-bottom: -10px;
-}
-
-.add-form__input--M {
-  width: 300px;
-  margin-left: 10px;
-}
-
-.add-form__input--S {
-  width: 250px;
-}
-
-.add-form__input--XS {
-  width: 150px;
-}
-
-.add-form__input--XS::placeholder {
-  text-align: right;
-}
-
 .add-form__input--disabled {
   background-color: #FFFFFF;
   border: 1px solid #D0D0D0;
+  color: #D0D0D0;
 }
 
 .add-form__input--disabled::placeholder {
   color: #D0D0D0;
-}
-
-.add-form__error-message {
-  position: absolute;
-  bottom: -30px;
-  right: 0;
-  font-size: 1rem;
-  color: red;
 }
 
 .add-form__error-message--temporary-priceInput {
