--- a/src/components/OfferDetails/OfferDetails.css
+++ b/src/components/OfferDetails/OfferDetails.css
@@ -11,7 +11,15 @@
 
 .offer-details__header {
   margin-bottom: 20px;
-  font-size: 2rem;
+  font-size: 3rem;
+  font-family: 'Merriweather', serif;
+  font-weight: bold;
+  border-bottom: solid 2px #fada27;
+}
+.offer-details h3 {
+  font-family: 'Merriweather', serif;
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
 }
 
 .offer-details__category {
@@ -28,41 +36,62 @@
 }
 
 .offer-details__contact--container--email, .offer-details__contact--container--phone {
-  height: 20px;
   margin-top: 10px;
+  margin-bottom: 20px;
+  line-height: 30px;
 }
 
 .offer-details__contact--button {
-  margin-left: 10px;
+  margin: 0 10px;
+  background-color: #000;
+  border: solid 3px #fade42;
+  color:#fade42;
+  cursor: pointer;
+  transition: all 0.5s;
+  padding: 5px 10px;
+  float: right;
 }
 
 .offer-details__contact--additional-info {
   grid-area: 1 / 2 / span 3 / span 1;
 }
 
-.offer-details__contact--additional-info--header {
-  font-size: 1rem;
-}
-
 .offer-details__offers {
   margin: 50px 20px 0 10px;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
 }
 
 .offer-details__offers--base, .offer-details__offers--extended, .offer-details__offers--extra {
-  width: 30%;
-  background-color: #f5f5f5;
-  padding: 10px;
+  box-shadow: 1px 1px 9px 5px #a9a9a994;
+  padding: 0 0 15px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 0 15px;
+}
+
+.offer-details__offers--base--header {
+  background-color: #fada2757;
+}
+.offer-details__offers--extended--header {
+  background-color: #fada27a6;
+}
+
+.offer-details__offers--extra--header {
+  background-color: #fada27;
 }
 
 .offer-details__offers--base--header, .offer-details__offers--extended--header, .offer-details__offers--extra--header {
   text-align: center;
+  font-family: 'Merriweather', serif;
+  padding: 10px;
+  margin: 0;
 }
 
 .offer-details__offers--base--description, .offer-details__offers--extended--description, .offer-details__offers--extra--description {
-  margin-top: 20px;
   min-height: 200px;
+  padding: 10px;
 }
 
 .offer-details__offers--base--price, .offer-details__offers--extended--price, .offer-details__offers--extra--price {
