--- a/src/components/UI/PriceInput/PriceInput.css
+++ b/src/components/UI/PriceInput/PriceInput.css
@@ -9,34 +9,34 @@
 
 .add-form__input {
   color: inherit;
-  padding: 10px;
-  margin-top: 10px;
+  padding: 1rem;
+  margin-top: 1rem;
   background-color: #E0E0E0;
   border: none;
-  font-size: 0.9rem;
+  font-size: 1.44rem;
 }
 
 .add-form__input--XS {
-  width: 150px;
+  width: 15rem;
 }
 
 .add-form__input--disabled {
   background-color: #FFFFFF;
-  border: 1px solid #D0D0D0;
+  border: 0.1rem solid #D0D0D0;
   color: #D0D0D0;
 }
 
 .add-form__error-message {
   position: absolute;
-  bottom: -35px;
+  bottom: -3.5rem;
   right: 0;
-  font-size: 0.75rem;
+  font-size: 1.2rem;
   color: red;
 }
 
 .add-form__input-currency {
   position: absolute;
   top: 0;
-  right: 10px;
+  right: 1rem;
   color: #3F3F3F;
 }
