--- a/src/components/Add/Form/Form.css
+++ b/src/components/Add/Form/Form.css
@@ -1,22 +1,22 @@
 .add-form {
-  max-width: 80%;
-  margin: 30px auto;
+  max-width: 94.4rem;
+  margin: 3rem auto;
   background-color: #FFFFFF;
-  font-size: 1rem;
+  font-size: 1.6rem;
   color: #000000;
-  border: 1px solid #A9A9A9;
+  border: 0.1rem solid #A9A9A9;
 }
 
 @media screen and (max-width: 960px) {
   .add-form {
-    max-width: 100%;
+    max-width: 118rem;
   }
 }
 
 .add-form__title {
-  font-size: 1.75rem;
+  font-size: 2.8rem;
   text-align: center;
-  padding-top: 30px;
+  padding-top: 3rem;
 }
 
 .add-form__fieldset{
@@ -26,35 +26,35 @@
 .add-form__error {
   position: absolute;
   bottom: 0;
-  left: 30px;
-  font-size: 1rem;
+  left: 3rem;
+  font-size: 1.6rem;
   color: #FF0000;
 }
 
 .add-form__fieldset--basic {
   border: none;
-  padding: 20px;
-  margin-right: 10px;
+  padding: 2rem;
+  margin-right: 1rem;
 }
 
 .add-form__fieldset--offers {
-  border: 1px solid #A9A9A9;
-  border-radius: 5px;
+  border: 0.1rem solid #A9A9A9;
+  border-radius: 0.5rem;
   position: relative;
-  margin: 30px;
-  padding: 20px;
-  padding-bottom: 40px;
+  margin: 3rem;
+  padding: 2rem;
+  padding-bottom: 4rem;
 }
 
 .add-form__fieldset--offers::before {
   content: '';
   text-align: center;
   position: absolute;
-  width: 70px;
-  height: 70px;
-  border: 1px solid grey;
+  width: 7rem;
+  height: 7rem;
+  border: 0.1rem solid grey;
   border-radius: 50%;
-  top: -35px;
+  top: -5%;
   left: 50%;
   transform: translateX(-50%);
   background-color: #fdde6b;
@@ -63,24 +63,24 @@
 .add-form__fieldset--offers::after {
   font-family: Pacifico, serif;
   content: "Sm";
-  font-size: 2rem;
+  font-size: 3.2rem;
   color: #221e1d;
   position: absolute;
-  top: -30px;
+  top: -4.5%;
   left: 50%;
   transform: translateX(-50%);
 }
 
 .add-form__fieldset--about {
   background-color: #FDDE6B;
-  padding: 20px 50px;
+  padding: 2rem 5rem;
   color: #282828;
   border: none;
 }
 
 .add-form__fieldset-title {
-  font-size: 1.1rem;
-  margin-top: 50px;
+  font-size: 1.76rem;
+  margin-top: 5rem;
   text-align: center;
 }
 
@@ -97,35 +97,35 @@
 }
 
 .add-form__fieldset-item--basic {
-  padding: 10px 20px;
+  padding: 1rem 2rem;
 }
 
 .add-form__fieldset-item--margin-top {
-  margin-top: 30px;
+  margin-top: 3rem;
 }
 
 .add-form__fieldset-item--textarea {
   align-self: center;
   flex-grow: 2;
-  margin-top: 60px;
+  margin-top: 6rem;
 }
 
 .add-form__fieldset-item--button {
-  padding: 20px 0 20px 20px;
+  padding: 2rem 0 2rem 2rem;
 }
 
 .add-form__caption {
-  font-size: 0.8rem;
+  font-size: 1.28rem;
   color: #24313c;
-  margin-right: 10px;
-  margin-top: 10px;
+  margin-right: 1rem;
+  margin-top: 1rem;
 }
 
 /* Inputs Styles */
 
 .add-form__input--disabled {
   background-color: #FFFFFF;
-  border: 1px solid #D0D0D0;
+  border: 0.1rem solid #D0D0D0;
   color: #D0D0D0;
 }
 
