--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  margin-top: 50px;
+  margin-top: 5rem;
 }
 
 @media screen and (max-width: 1200px) {
@@ -12,22 +12,22 @@
 }
 
 .login-form {
-  border: 1px solid #A9A9A9;
-  border-radius: 5px;
-  margin: 30px;
-  padding: 20px;
-  height: 570px;
+  border: 0.1rem solid #A9A9A9;
+  border-radius: 0.5rem;
+  margin: 3rem;
+  padding: 2rem;
+  height: 57rem;
   position: relative;
 }
 
 .login-form__icon-container {
   text-align: center;
   position: absolute;
-  width: 70px;
-  height: 70px;
-  border: 1px solid #A9A9A9;
+  width: 7rem;
+  height: 7rem;
+  border: 0.1rem solid #A9A9A9;
   border-radius: 50%;
-  top: -35px;
+  top: -5%;
   left: 50%;
   transform: translateX(-50%);
   background-color: #E0E0E0;
@@ -35,7 +35,7 @@
 
 .login-form__icon {
   color: #24313c;
-  font-size: 2rem;
+  font-size: 3.2rem;
   position: absolute;
   top: 20%;
   left: 50%;
@@ -44,11 +44,11 @@
 
 .login-form__fieldset {
   border: none;
-  margin-top: 25px;
+  margin-top: 2.5rem;
 }
 
 .login-form__title {
-  font-size: 1.5rem;
+  font-size: 2.4rem;
   text-align: center;
 }
 
@@ -56,11 +56,11 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
-  margin: 40px 30px;
+  margin: 4rem 3rem;
 }
 
 .login-form__item--button {
   position: absolute;
-  bottom: 10px;
-  right: 20px;
+  bottom: 1rem;
+  right: 2rem;
 }
