--- a/src/components/Register/RegisterForm/Register.css
+++ b/src/components/Register/RegisterForm/Register.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-top: 50px;
+  margin-top: 5rem;
 }
 
 @media screen and (max-width: 1200px) {
@@ -12,22 +12,22 @@
 }
 
 .register-form {
-  border: 1px solid #A9A9A9;
-  border-radius: 5px;
-  padding: 20px 20px 0 20px;
-  margin: 30px;
+  border: 0.1rem solid #A9A9A9;
+  border-radius: 0.5rem;
+  padding: 2rem 2rem 0 2rem;
+  margin: 3rem;
   position: relative;
-  width: 590px;
+  width: 59rem;
 }
 
 .register-form__icon-container {
   text-align: center;
   position: absolute;
-  width: 70px;
-  height: 70px;
-  border: 1px solid #A9A9A9;
+  width: 7rem;
+  height: 7rem;
+  border: 0.1rem solid #A9A9A9;
   border-radius: 50%;
-  top: -35px;
+  top: -5%;
   left: 50%;
   transform: translateX(-50%);
   background-color: #E0E0E0;
@@ -35,7 +35,7 @@
 
 .register-form__icon {
   color: #24313c;
-  font-size: 2rem;
+  font-size: 3.2rem;
   position: absolute;
   top: 20%;
   left: 50%;
@@ -44,30 +44,30 @@
 
 .register-form__fieldset {
   border: none;
-  margin-top: 25px;
+  margin-top: 2.5rem;
 }
 
 .register-form__title {
-  font-size: 1.5rem;
+  font-size: 2.4rem;
   text-align: center;
 }
 
 .register-form__item {
   display: flex;
   flex-wrap: wrap;
-  margin: 20px 40px;
+  margin: 2rem 4rem;
 }
 
 .input--M {
-  width: 300px;
+  width: 30rem;
 }
 
 .register-form__item--button {
-  margin-left: 260px;
+  margin-left: 26rem;
 }
 
 .register-form__item--checkbox{
   position:absolute;
-  width: 20px;
-  bottom: 15px;
+  width: 2rem;
+  bottom: 1.5rem;
 }
