--- a/src/components/Register/SuccessRegisterMessage/SuccessRegisterMessage.css
+++ b/src/components/Register/SuccessRegisterMessage/SuccessRegisterMessage.css
@@ -5,8 +5,8 @@ section {
 .success-register-message__main-wrapper {
   box-sizing: border-box;
   margin: 0 auto;
-  max-width: 1200px;
-  height: 400px;
+  max-width: 118rem;
+  height: 40rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,13 +14,13 @@ section {
 
 .success-register-message__text-wrapper {
   max-width: 50%;
-  border: 2px solid #000;
-  padding: 15px 25px;
-  border-radius: 15px;
+  border: 0.2rem solid #000;
+  padding: 1.5rem 2.5rem;
+  border-radius: 1.5rem;
 }
 
 .success-register-message__text {
-  font-size: 1.4rem;
+  font-size: 2.24rem;
   font-family: Arial, Helvetica, sans-serif;
 }
 
