--- a/src/components/Search/SearchForm/SearchInput.css
+++ b/src/components/Search/SearchForm/SearchInput.css
@@ -1,11 +1,11 @@
 .search__input-wrapper {
   float: left;
-  margin-right: 15px;
-  width: calc(100% - 165px);
+  margin-right: 1.5rem;
+  width: calc(100% - 16.5rem);
 }
 
 #search__input {
-  border: solid 3px #9c9b9b;
+  border: solid 0.3rem #9c9b9b;
   width: 100%;
 }
 #search__input:focus {
@@ -15,10 +15,10 @@
 }
 
 .search__form-item {
-  padding: 15px;
+  padding: 1.5rem;
 }
 
 .search__message-error {
-  font-size: 15px;
-  padding: 15px 0;
+  font-size: 1.5rem;
+  padding: 1.5rem 0;
 }
