--- a/src/components/Search/SearchResults/FoundSearchResults/FoundSearchResults.css
+++ b/src/components/Search/SearchResults/FoundSearchResults/FoundSearchResults.css
@@ -1,17 +1,17 @@
 .search-results {
   width: 80%;
   margin: auto;
-  padding: 30px 0;
-  border: 1px solid #A9A9A9;
-  box-shadow: 14px 12px 9px darkgrey;
+  padding: 3rem 0;
+  border: 0.1rem solid #A9A9A9;
+  box-shadow: 1.4rem 1.2rem 0.9rem darkgrey;
 }
 
 .search-results__title {
   font-weight: 700;
-  font-size: 30px;
+  font-size: 3rem;
   text-align: center;
 }
 
 .search-results__list {
-  margin: 70px 20px;
+  margin: 7rem 2rem;
 }
