--- a/src/components/UI/OfferTextarea/OfferTextarea.css
+++ b/src/components/UI/OfferTextarea/OfferTextarea.css
@@ -4,26 +4,26 @@
 
 .add-form__input {
   color: inherit;
-  padding: 10px;
-  margin-top: 10px;
+  padding: 1rem;
+  margin-top: 1rem;
   background-color: #E0E0E0;
   border: none;
 }
 
 .add-form__input--XL {
-  height: 150px;
+  height: 15rem;
   width: 90%;
-  margin-bottom: -10px;
+  margin-bottom: -1rem;
 }
 
 .add-form__input--XL::placeholder {
   text-align: center;
-  padding: 50px 0;
+  padding: 5rem 0;
 }
 
 .add-form__input--disabled {
   background-color: #FFFFFF;
-  border: 1px solid #D0D0D0;
+  border: 0.1rem solid #D0D0D0;
   color: #D0D0D0;
 }
 
@@ -33,8 +33,8 @@
 
 .add-form__error-message {
   position: absolute;
-  bottom: -30px;
+  bottom: -3rem;
   right: 0;
-  font-size: 0.75rem;
+  font-size: 1.2rem;
   color: red;
 }
