media query fix (#123)
* media query rem fix

* max width to 100%

* media query max width to 100%

* conflict solved

* add-form max-width 80

--- a/src/components/Add/Form/Form.css
+++ b/src/components/Add/Form/Form.css
@@ -1,5 +1,5 @@
 .add-form {
-  max-width: 94.4rem;
+  max-width: 80%;
   margin: 3rem auto;
   background-color: #FFFFFF;
   font-size: 1.6rem;
@@ -9,7 +9,7 @@
 
 @media screen and (max-width: 960px) {
   .add-form {
-    max-width: 118rem;
+    max-width: 100%;
   }
 }
 
