FE - PRODPFIP-242&243 Add City and voivodeship options to add offer form, validation (#144)
* Replace different input components with GenericInput; Add classNames for label,span and input in GenericInput; Add default props to GenericInput not to affect other components using GenericInput - temporary

* Add City input and placeholder for Voivodeship select; Change CategorySelect to GenericSelect that can be used as universal fetch - select component; Add styling to Form, GenericSelect, GenericInput components; Add couple of validation functions; Add placeholder template for incoming voivodeship data in translation files; Remove unused functions from Form

* Update path to new GenericSelect component in test file

* Replace placeholder for voivodeship select with real one (yet to test); Add error class prop for GenericInput; Replace translateKey with name in GenericInput option value; Update translation file for voivodeships list to match BE implementation; Update css files for GenericInput and GenericSelect.

* Remove unused input components and translation paths; Add missing translations, update outdated ones; Add missing 'ę' letter to patterns in validation functions; Update GenericInput and GenericSelect css files

* Change add-offer data json model to avoid sending empty keys

--- a/src/components/Add/Form/Form.css
+++ b/src/components/Add/Form/Form.css
@@ -1,3 +1,15 @@
+.input-title {
+	width: 25rem;
+  border: none;
+  height: 3rem;
+  background-color: #E0E0E0;
+	color: inherit;
+	outline: none;
+  padding: 0.5rem 0.5rem 0.5rem 1rem;
+  margin-left: 1rem;
+  box-sizing: border-box;
+}
+
 .add-form {
   max-width: 80%;
   margin: 3rem auto;
@@ -5,6 +17,14 @@
   font-size: 1.6rem;
   color: #000000;
   border: 0.1rem solid #A9A9A9;
+}
+
+.add-form_span--block{
+  display: block;
+}
+
+.add-form_span--inline{
+  display: inline;
 }
 
 @media screen and (max-width: 960px) {
@@ -89,6 +109,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: flex-end;
+  margin-bottom: 2rem;
 }
 
 .add-form__fieldset-wrapper--basic {
@@ -107,7 +128,7 @@
 .add-form__fieldset-item--textarea {
   align-self: center;
   flex-grow: 2;
-  margin-top: 6rem;
+  margin-top: 1.5rem;
 }
 
 .add-form__fieldset-item--button {
@@ -131,4 +152,15 @@
 
 .add-form__input--disabled::placeholder {
   color: #D0D0D0;
+}
+
+.add-form__input--S {
+  width: 25rem;
+}
+
+.input-title__errorMessage {
+  font-size: 1.2rem;
+  color: red;
+  margin-top: 0.5rem;
+  text-align: right;
 }
