--- a/src/components/UI/GenericInput/GenericInput.css
+++ b/src/components/UI/GenericInput/GenericInput.css
@@ -35,6 +35,10 @@
   background-color: #FEECA5;
 }
 
+.input--yellow-disabled {
+  background-color: #d8c478;
+}
+
 .input--XL {
   height: 15rem;
   width: 90%;
@@ -59,6 +63,14 @@
 }
 
 .input__error-message {
+  position: absolute;
+  bottom: -1.5rem;
+  right: 0;
+  font-size: 1.2rem;
+  color: #FF0000;
+}
+
+.input__error-message--yellow {
   position: absolute;
   bottom: -3rem;
   right: 0;
