PRODPFIP-309 Inputs Validation in Register Form (#164)
* Delete unnecessary wrapper

* Add some inputs validation

* Change Inputs order in Register form

* Move InvoiceInputGroup to Register Folder

* Style Fix

--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -60,7 +60,7 @@
 .input__error-message {
   position: absolute;
   right: 0;
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   color: #FF0000;
 }
 
@@ -78,6 +78,11 @@
   right: 1.5rem;
   transform: translateY(-50%);
   font-size: 2rem;
+  color: #D8C478;
+}
+
+.input__eye-icon:hover {
+  color: #000000;
 }
 
 .input--grey:disabled {
