--- a/src/components/Register/RegisterForm/Register.css
+++ b/src/components/Register/RegisterForm/Register.css
@@ -1,21 +1,8 @@
-.register-form__wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-top: 5rem;
-}
-
-@media screen and (max-width: 1200px) {
-  .register-form__wrapper {
-    justify-content: center;
-  }
-}
-
 .register-form {
   border: 0.1rem solid #A9A9A9;
   border-radius: 0.5rem;
   padding: 2rem 2rem 0 2rem;
-  margin: 3rem;
+  margin: 7rem auto;
   position: relative;
   width: 59rem;
 }
@@ -27,7 +14,7 @@
   height: 7rem;
   border: 0.1rem solid #A9A9A9;
   border-radius: 50%;
-  top: -3.5%;
+  top: -2%;
   left: 50%;
   transform: translateX(-50%);
   background-color: #E0E0E0;
