feature/PRODPFIP-291 responsive footer (#162)
* responsive footer

* loginForm style fix

* position fix

* media query in header

* layout structure

* changes after review

* max width in footer top

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -12,11 +12,21 @@
 
 html {
   font-size: 10px;
+  height: 100%;
 }
 
 body {
-  width: 118rem;
-  margin: 0 auto;
+  height: 100%;
   font-family: 'Fira Sans', sans-serif;
   font-size: 1.6rem;
+}
+
+.content {
+  min-height: calc(100vh - 16rem);
+}
+
+@media (min-width: 768px) {
+  .content {
+    min-height: calc(100vh - 65.7rem);
+  }
 }
