--- a/src/components/index.css
+++ b/src/components/index.css
@@ -4,6 +4,24 @@
   url('./fonts/FiraSans-Regular.ttf')
 }
 
+@font-face {
+  font-family: 'Lato';
+  src: local('Lato'),
+  url('./fonts/Lato-Regular.ttf')
+}
+
+@font-face {
+  font-family: 'Lato-Thin';
+  src: local('Lato-Thin'),
+  url('./fonts/Lato-Thin.ttf')
+}
+
+@font-face {
+  font-family: 'Lato-Bold';
+  src: local('Lato-Bold'),
+  url('./fonts/Lato-Bold.ttf')
+}
+
 *, *:before, *:after {
   box-sizing: border-box;
   margin: 0;
@@ -17,8 +35,13 @@ html {
 
 body {
   height: 100%;
-  font-family: 'Fira Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 1.6rem;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
 
 .content {
