Feature/prodpfip 287 rwd header (#168)
* header for mobile

* header for tablet

* header for desktop

* deletion of useless components

* styles fix

* z index

* temporary margin in Search form

* positions fix

* deletion of margin in mobile

* changes after review

* padding instead of margin

* position absolute in Header

* changes after review

* logo resised

--- a/src/components/UI/LoginButton/LoginButton.css
+++ b/src/components/UI/LoginButton/LoginButton.css
@@ -1,28 +1,12 @@
 .login-button {
-  width: 14rem;
-  margin: 2rem 0;
   padding: 1rem;
-  background-color: transparent;
-  border:none;
-  font-size: 1.5rem;
-  font-weight: bold;
-  letter-spacing: 0.15rem;
-  text-transform: uppercase;
-  float: right;
-  transition: all 0.2s ease-out;
-  color: #000;
-  text-decoration: none;
-  text-align: center;
 }
 
 .login-button:hover {
   color:#FFFFFF;
-  background-color: #000000;
-  border-radius: 0.5rem;
+  background-color: #fade42;
+  border-radius: 0.1rem;
   cursor: pointer;
-}
-
-.login-button:focus {
-  outline: none;
-  transform: scale(0.9);
+  transition: background-color 0.5s ease;
+  transition: color 0.5s ease;
 }
