--- a/src/components/App/Header/Header.css
+++ b/src/components/App/Header/Header.css
@@ -1,19 +1,149 @@
 header {
+  width: 100%;
+  max-height: 5.2rem;
+  background: #fff;
+  font-size: 1.4rem;
+  box-shadow: 0 0.2rem 1rem 0 rgba(0,0,0,0.4);
+  z-index: 2;
+}
+
+.header__container {
   display: grid;
-  justify-items: center;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.logo {
+  height: 5rem;
+  width: 5rem;
+}
+
+.logo__link {
+  padding-left: 2.5rem;
 }
 
 nav {
-  align-self: center;
+  position: relative;
+  grid-column: 4 / span 1;
+  display: grid;
+  justify-items: end;
+  align-items: center;
 }
 
-.add-offer {
-  justify-self: end;
+nav a {
+  color: #000;
+  text-decoration: none;
+}
+
+.user-name {
+  font-weight: bold;
+  padding-right: 1.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header__arrow {
+  border: 0;
+  background-color: transparent;
+  margin-left: 0.2rem;
+  height: 2.3rem;
+  margin-left: 0.2rem;
+}
+
+.header__links {
+  position: absolute;
+  top: 6rem;
+  padding-right: 1.5rem;
+  background: #fff;
+}
+
+.header__link {
+  display: block;
+  padding: 1rem 0 1rem 1rem;
+  text-align: right;
+  width: 11rem;
+}
+
+.header__link:hover {
+    color:#FFFFFF;
+    background-color: #fade42;
+    border-radius: 0.1rem;
+    cursor: pointer;
+    transition: background-color 0.5s ease;
+    transition: color 0.5s ease;
+}
+
+.fa-angle-down {
+  height: 2.3rem;
+}
+
+.svg-inline--fa.fa-w-10 {
+  width: 2rem;
+}
+
+.menu-visible {
+  display: block;
+}
+
+.menu-invisible {
+  display: none;
 }
 
 @media (min-width: 768px) {
   header {
-    font-size: 3.2rem;
-    grid-template-columns: repeat(3, 1fr);
+    position: absolute;
+    top: 5rem;
+    font-size: 1.5rem;
+    box-shadow: none;
+    padding: 0;
+    box-shadow: 0 0.3rem 0.1rem 0px rgba(0,0,0,0.15);
+  }
+  .header__container {
+    max-width: 76.8rem;
+    margin: 0 auto;
+  }
+  .header__links {
+    top: 5.6rem;
+    padding-right: 2.5rem;
+  }
+  .user-name {
+    padding-right: 2.5rem;
+  }
+}
+
+@media (min-width: 1025px) {
+  header {
+    padding: 0;
+    font-size: 1.6rem;
+  }
+  .header__container {
+    max-width: 118rem;
+    padding: 0 2.5rem;
+    display: flex;
+    justify-content: flex-end;
+  }
+  .logo__link {
+    margin-right: auto;
+  }
+  nav {
+    display: flex;
+  }
+  .header__links {
+    position: static;
+    display: flex;
+    justify-items: end;
+    padding: 0 0 0 1.5rem;
+    box-shadow: none;
+    width: auto;
+  }
+  .header__link {
+    width: auto;
+    padding-right: 1rem;
+  }
+  .user-name {
+    padding-right: 0;
+  }
+  .header__arrow {
+    display: none;
   }
 }
