--- a/src/components/Search/SearchForm/SearchForm.css
+++ b/src/components/Search/SearchForm/SearchForm.css
@@ -2,5 +2,11 @@
   margin: 0 auto;
   width: 64rem;
   max-width: 100%;
-  padding: 5rem 1.5rem;
+  padding: 10rem 0 1.5rem 0;
+}
+
+@media (min-width: 768px) {
+  .search__form {
+    padding: 20rem 0 1.5rem 0;
+  }
 }
