--- a/src/components/UI/SubmitButton/SubmitButton.css
+++ b/src/components/UI/SubmitButton/SubmitButton.css
@@ -1,24 +1,36 @@
-.form__button--submit {
-  background-color: #000;
-  border: solid 0.3rem #fade42;
-  color:#fade42;
-  font-weight: 400;
-  font-size: 1.5rem;
-  text-transform: uppercase;
+.form__button--lens {
+  position: absolute;
+  top: 0.7rem;
+  left: 2rem;
+  background: url("/img/search-section/lupka.png");
+  background-size: cover;
+  border: none;
   cursor: pointer;
-  width: 15rem;
-  transition: all 0.5s;
-  padding: 1.5rem;
-}
-.form__button--submit:hover {
-  background-color: #fada27;
-  border-color: #000;
-  color: #000;
-}
-.form__button--submit:focus {
-  outline: none;
+  padding: 1.1rem;
 }
 
-.form__button--submit:disabled {
-  background-color: #777;
+.form__button--submit {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .form__button--submit {
+    position: absolute;
+    top: 5rem;
+    right: 0;
+    display: block;
+    max-height: 3.5rem;
+    padding: 1rem 3rem;
+    align-self: center;
+    border: none;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+  }
+  .form__button--submit:disabled {
+    background: #999;
+  }
+  .form__button--lens {
+    top: 5.6rem;
+  }
 }
