--- a/src/components/Search/SearchForm/SearchForm.css
+++ b/src/components/Search/SearchForm/SearchForm.css
@@ -1,4 +1,4 @@
-.search {
+.search__wrapper {
   height: 28rem;
   background: url("/img/search-section/mobile.jpg");
   background-size: cover;
@@ -13,13 +13,12 @@
 }
 
 .search__form {
-  position: relative;
   width: 95%;
   margin: 0 auto;
 }
 
 @media (min-width: 768px) {
-  .search {
+  .search__wrapper {
     height: 50rem;
     margin: 0;
   }
@@ -28,15 +27,12 @@
   }
   .search__form {
     width: 90%;
-    display: grid;
-    grid-template-columns: 1fr 8rem;
     padding-top: 2rem;
   }
 }
 
 @media (min-width: 1025px) {
-  .search {
-    height: 45rem;
+  .search__wrapper {
     margin: 0;
   }
   .search__header {
@@ -44,8 +40,6 @@
   }
   .search__form {
     width: 50%;
-    display: grid;
-    grid-template-columns: 1fr 8rem;
     padding-top: 2rem;
   }
 }
