--- a/src/components/UI/SubmitButton/SubmitButton.css
+++ b/src/components/UI/SubmitButton/SubmitButton.css
@@ -1,12 +1,15 @@
 .form__button--lens {
   position: absolute;
-  top: 0.7rem;
-  left: 2rem;
-  background: url("/img/search-section/lupka.png");
-  background-size: cover;
-  border: none;
-  cursor: pointer;
+  top: 0.8rem;
+  left: 1rem;
   padding: 1.1rem;
+  border: none;
+  outline: 0;
+  cursor: pointer;
+  background: url("/img/search-section/lupka.png");
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
 }
 
 .form__button--submit {
