Fix/PRODPFIP-289 Add Transition to drop-down category list (#188)
* Add transition to drop-down category list

* Move email existin message covered by header

* Add more margin to offer details

* Padding fix

* Set global font for buttons

--- a/src/components/Homepage/CategoryList/Category/Category.css
+++ b/src/components/Homepage/CategoryList/Category/Category.css
@@ -38,7 +38,7 @@
 
   .category__name {
     font-size: 2rem;
-    margin: 2rem;
+    margin: 2rem 0;
   }
 }
 
@@ -46,7 +46,7 @@
   .category {
     height: 25rem;
     width: 25rem;
-    padding: 7rem 1rem;
+    padding: 7rem 2rem;
   }
 
   .category__name {
