--- a/src/components/Login/LoginForm/LoginForm.css
+++ b/src/components/Login/LoginForm/LoginForm.css
@@ -1,67 +1,47 @@
-.login-form__wrapper {
-  display: flex;
-  width: 118rem;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: stretch;
-  margin: 15rem auto 0 auto;
-}
-
-@media screen and (max-width: 1200px) {
-  .login-form__wrapper {
-    justify-content: center;
-  }
-}
-
 .login-form {
-  border: 0.1rem solid #A9A9A9;
-  border-radius: 0.5rem;
-  margin: 3rem;
-  padding: 2rem;
-  position: relative;
-}
-
-.login-form__icon-container {
-  text-align: center;
-  position: absolute;
-  width: 7rem;
-  height: 7rem;
-  border: 0.1rem solid #A9A9A9;
-  border-radius: 50%;
-  top: -5%;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #E0E0E0;
-}
-
-.login-form__icon {
-  color: #24313c;
-  font-size: 3.2rem;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%);
-}
-
-.login-form__fieldset {
-  border: none;
-  margin-top: 2.5rem;
+  font-size: 1.4rem;
+  margin-top: 5rem;
 }
 
 .login-form__title {
-  font-size: 2.4rem;
+  font-size: 2rem;
   text-align: center;
 }
 
 .login-form__item {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  margin: 4rem 3rem;
+  height: 4rem;
+  margin: 4rem auto 0rem auto;
+}
+
+.login-form__item--input {
+  width: 29rem;
 }
 
 .login-form__item--button {
-  position: absolute;
-  bottom: 2rem;
-  right: 2rem;
+  width: 19.5rem;
+}
+
+.login-form__register-link {
+  width: 19.5rem;
+  margin: 2rem auto 0rem auto;
+  text-align: right;
+}
+
+@media (min-width: 768px) {
+  .login-form {
+    font-size: 1.5rem;
+    margin-top: 20rem;
+  }
+  .login-form__item--input {
+    width: 40rem;
+  }
+  .login-form__item--button, .login-form__register-link {
+    width: 28rem;
+  }
+}
+
+@media (min-width: 1025px) {
+  .login-form__item--input {
+    width: 55rem;
+  }
 }
