--- a/src/components/App/Footer/Footer.css
+++ b/src/components/App/Footer/Footer.css
@@ -58,8 +58,9 @@ footer {
   }
 
   .footer-top__row--link:hover {
-    color: #fade42;
-    transition: color 0.5s ease;
+    width: fit-content;
+    box-shadow: inset 0 0 0 #fff, inset 0 -0.1rem 0 #fff;
+    transition: box-shadow 0.25s ease;
   }
 
   .footer-bottom {
