--- a/src/components/UI/SubmitButton/SubmitButton.css
+++ b/src/components/UI/SubmitButton/SubmitButton.css
@@ -12,11 +12,26 @@
   background-position: 50% 50%;
 }
 
+.form__button--submit-home {
+  display: none;
+}
+
 .form__button--submit {
   display: none;
 }
 
 @media (min-width: 768px) {
+  .form__button--submit-home {
+    display: block;
+    max-height: 3.5rem;
+    padding: 1rem 3rem;
+    align-self: center;
+    border: none;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
+  }
+
   .form__button--submit {
     display: block;
   max-height: 3.5rem;
@@ -30,5 +45,18 @@
   .form__button--submit:disabled {
     background: #999;
     cursor: auto;
+  }
+}
+
+@media (min-width: 1025px) {
+  .form__button--submit {
+    display: block;
+    max-height: 3.5rem;
+    padding: 1rem 3rem;
+    align-self: center;
+    border: none;
+    background: #000;
+    color: #fff;
+    cursor: pointer;
   }
 }
