--- a/src/components/UI/SubmitButton/SubmitButton.css
+++ b/src/components/UI/SubmitButton/SubmitButton.css
@@ -16,6 +16,10 @@
   display: none;
 }
 
+.form__button--submit-home:disabled {
+  background: #999;
+}
+
 .form__button--submit {
   display: none;
 }
