--- a/src/components/Search/SearchForm/SearchForm.css
+++ b/src/components/Search/SearchForm/SearchForm.css
@@ -1,15 +1,3 @@
-.search__wrapper-home {
-  height: 28rem;
-  background: url("/assets/images/search-section/mobile.jpg");
-  background-size: cover;
-  background-position: 100% 100%;
-}
-
-.search__wrapper {
-  background: #fbdd61;
-  height: 8rem;
-}
-
 .search__header {
   padding-top: 3rem;
   font-size: 3rem;
@@ -26,7 +14,7 @@
 .search__form {
   width: 95%;
   margin: 0 auto;
-  padding: 1rem 0;
+  padding-top: 1.6rem;
 }
 
 @media (min-width: 768px) {
@@ -35,15 +23,12 @@
     margin: 0;
   }
 
-  .search__wrapper {
-    height: 15rem;
-  }
   .search__header {
     padding-top: 16rem;
   }
   .search__form {
     width: 55%;
-    padding-top: 6rem;
+    padding-top: 4rem;
     margin: 0 9rem;
   }
 }
@@ -64,13 +49,9 @@
 
   .search__form {
     width: 50%;
-    padding-top: 2rem;
+    padding-top: 1.3rem;
     z-index: 2;
     position: relative;
-    margin: 0.7em 11em;
-  }
-
-  .search__wrapper {
-    height: 13rem;
+    margin: 0.7rem 11rem;
   }
 }
