--- a/src/components/Search/SearchForm/SearchForm.css
+++ b/src/components/Search/SearchForm/SearchForm.css
@@ -13,8 +13,13 @@
 
 .search__form {
   width: 95%;
-  margin: 0 auto;
-  padding-top: 1.6rem;
+  margin: 0;
+  padding-top: 0;
+}
+
+.search__wrapper {
+  grid-column: 2 / span 9;
+  grid-row: 2 / 2;
 }
 
 @media (min-width: 768px) {
@@ -23,13 +28,19 @@
     margin: 0;
   }
 
+  .search__wrapper {
+    grid-column: 2 / 5;
+    grid-row: 1 / 1;
+
+  }
+
   .search__header {
     padding-top: 16rem;
   }
   .search__form {
-    width: 55%;
-    padding-top: 4rem;
-    margin: 0 9rem;
+    width: 100%;
+    padding-top: 1rem;
+    margin: 0;
   }
 }
 
@@ -48,10 +59,10 @@
   }
 
   .search__form {
-    width: 50%;
-    padding-top: 1.3rem;
+    width: 45rem;
+    margin: 0;
+    padding-top: 1rem;
     z-index: 2;
     position: relative;
-    margin: 0.7rem 11rem;
   }
 }
