feature/PRODPFIP-348 login implementation (#212)
* login implementation

* translations fix

* test refresh

* call method in Login screen

* tests refresh

* translation fix

* redirect fix

* response in state removed

--- a/src/components/Login/LoginForm/LoginForm.css
+++ b/src/components/Login/LoginForm/LoginForm.css
@@ -32,6 +32,14 @@
     box-shadow: inset 0 0 0 #000, inset 0 -0.1rem 0 #000;
 }
 
+.login-form__errors {
+  height: 4rem;
+  color: #F92828;
+  text-align: center;
+  padding-top: 0.5rem;
+  font-size: 1.4rem;
+}
+
 @media (min-width: 768px) {
   .login-form {
     font-size: 1.5rem;
