--- a/src/components/Register/RegisterForm/RegisterForm.css
+++ b/src/components/Register/RegisterForm/RegisterForm.css
@@ -86,6 +86,10 @@
   width: 29rem;
 }
 
+.register__checkbox--link {
+  box-shadow: inset 0 0 0 #000, inset 0 -0.1rem 0 #000;
+}
+
 input[type="checkbox"] {
   display: none;
 }
