--- a/src/components/Add/Form/Form.css
+++ b/src/components/Add/Form/Form.css
@@ -11,17 +11,32 @@
 }
 
 .add-form {
-  max-width: 60%;
-  margin: 15rem auto;
-  background-color: #FFFFFF;
-  font-size: 1.6rem;
-  color: #000000;
-  border: 0.1rem solid #A9A9A9;
+  font-size: 1.2rem;
+  margin: 4rem;
+}
+
+@media (min-width: 768px) {
+  .add-form {
+    font-size: 1.3rem;
+    margin: 15rem;
+  }
+  .register-form__item--input {
+    width: 40rem;
+  }
+}
+
+@media (min-width: 1025px) {
+  .add-form {
+    font-size: 1.4rem;
+  }
+  .register-form__item--input {
+    width: 55rem;
+  }
 }
 
 .add-form__item {
   height: 4rem;
-  margin: 4rem auto 0rem auto;
+  margin: 4.7rem auto 0rem auto;
 }
 
 .add-form__item--input {
@@ -32,11 +47,11 @@
   width: 19.5rem;
 }
 
-.add-form_span--block{
+.add-form_span--block {
   display: block;
 }
 
-.add-form_span--inline{
+.add-form_span--inline {
   display: inline;
 }
 
@@ -47,13 +62,8 @@
 }
 
 .add-form__title {
-  font-size: 2.8rem;
+  font-size: 3rem;
   text-align: center;
-  padding-top: 3rem;
-}
-
-.add-form__fieldset{
-  position: relative;
 }
 
 .add-form__error {
@@ -64,87 +74,22 @@
   color: #F92828;
 }
 
-.add-form__fieldset--basic {
-  border: none;
-  padding: 2rem;
-  margin-right: 1rem;
-}
-
-.add-form__fieldset--offers {
-  border: 0.1rem solid #A9A9A9;
-  border-radius: 0.5rem;
+.add-form__fieldset {
   position: relative;
-  margin: 3rem;
-  padding: 2rem;
-  padding-bottom: 4rem;
-}
-
-.add-form__fieldset--offers::before {
-  content: '';
-  text-align: center;
-  position: absolute;
-  width: 7rem;
-  height: 7rem;
-  border: 0.1rem solid grey;
-  border-radius: 50%;
-  top: -5%;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #fdde6b;
-}
-
-.add-form__fieldset--offers::after {
-  content: "Sm";
-  font-size: 3.2rem;
-  color: #221e1d;
-  position: absolute;
-  top: -4.5%;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.add-form__fieldset--about {
-  background-color: #FDDE6B;
-  padding: 2rem 5rem;
-  color: #282828;
   border: none;
+  padding: 4rem 0 5rem 0;
+  border-bottom: 1px solid;
 }
 
 .add-form__fieldset-title {
-  font-size: 1.76rem;
-  margin-top: 5rem;
+  font-size: 2.2rem;
+  margin-top: 3rem;
   text-align: center;
 }
 
 .add-form__fieldset-wrapper {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-end;
-  margin-bottom: 2rem;
-}
-
-.add-form__fieldset-wrapper--basic {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.add-form__fieldset-item--basic {
-  padding: 1rem 2rem;
-}
-
-.add-form__fieldset-item--margin-top {
-  margin-top: 3rem;
-}
-
-.add-form__fieldset-item--textarea {
-  align-self: center;
-  flex-grow: 2;
-  margin-top: 1.5rem;
-}
-
-.add-form__fieldset-item--button {
-  padding: 2rem 0 2rem 2rem;
+  width: 55rem;
+  margin: 4.7rem auto;
 }
 
 .add-form__caption {
@@ -166,23 +111,11 @@
   color: #D0D0D0;
 }
 
-.add-form__input--S {
-  width: 25rem;
-}
-
 .input-title__errorMessage {
   font-size: 1.2rem;
   color: #F92828;
   margin-top: 0.5rem;
   text-align: right;
-}
-
-
-
-
-.add-form__item {
-  height: 4rem;
-  margin: 4rem auto 0rem auto;
 }
 
 .add-form__item--input {
