price-inputs-finished

--- a/src/components/Add/Form/Form.css
+++ b/src/components/Add/Form/Form.css
@@ -20,23 +20,17 @@
     font-size: 1.3rem;
     margin: 15rem;
   }
-  .register-form__item--input {
-    width: 40rem;
-  }
 }
 
 @media (min-width: 1025px) {
   .add-form {
     font-size: 1.4rem;
   }
-  .register-form__item--input {
-    width: 55rem;
-  }
 }
 
 .add-form__item {
-  height: 4.3rem;
-  margin: 4.3rem auto 0rem auto;
+  height: 3rem;
+  margin: 3rem auto 0rem auto;
 }
 
 .add-form__item--input {
@@ -62,8 +56,9 @@
 }
 
 .add-form__title {
-  font-size: 3rem;
+  font-size: 2.5rem;
   text-align: center;
+  margin-bottom: 5rem;
 }
 
 .add-form__error {
@@ -77,26 +72,37 @@
 .add-form__fieldset {
   position: relative;
   border: none;
-  padding: 4rem 0 5rem 0;
+  padding: 2rem 0 4rem 0;
   border-bottom: 1px solid;
 }
 
+.add-form__fieldset:nth-last-child(1) {
+  border: none;
+  padding: 2rem 0 0 0;
+}
+
 .add-form__fieldset-title {
-  font-size: 2.2rem;
-  margin-top: 3rem;
+  font-size: 1.6rem;
+  margin: 2rem 0;
   text-align: center;
 }
 
 .add-form__fieldset-wrapper {
   width: 55rem;
-  margin: 4.7rem auto;
+  margin: 3rem auto 0 auto;
+}
+
+.add-form__fieldset-item--textarea {
+  margin-top: 3rem;
 }
 
 .add-form__caption {
-  font-size: 1.28rem;
-  color: #24313c;
-  margin-right: 1rem;
   margin-top: 1rem;
+}
+
+.add-form__caption--paragraph {
+  font-size: 1.5rem;
+  color: #24313c;
 }
 
 /* Inputs Styles */
