--- a/src/components/Add/Form/PriceInput/PriceInput.css
+++ b/src/components/Add/Form/PriceInput/PriceInput.css
@@ -7,20 +7,38 @@
   left: -9999px;
 }
 
-.add-form__offer-price {
-  color: inherit;
-  padding: 1rem;
-  margin-top: 1rem;
-  background-color: #FFFFFF;
+.add-form__offer-price__inline {
+  width: 35%;
+  height: 100%;
   border: 0.1rem solid #999;
   border-radius: 0.5rem;
-  font-size: 1.44rem;
+  display: grid;
+  grid-template-columns: 25% 60% 1fr;
+}
+
+.add-form__offer-price__inline--disabled {
+  border-color: #D0D0D0;
+  color: #D0D0D0;
+}
+
+.add-form__offer-price__label {
+  text-align: center;
+  align-self: center;
+}
+
+.add-form__offer-price {
+  border: none;
+  position: relative;
+  border-left: 0.1rem solid #999;
+  padding: 0.7rem;
+  background-color: #FFFFFF;
+  font-size: 1.3rem;
+  text-align: center;
+  align-self: center;
 }
 
 .add-form__offer-price--disabled {
-  background-color: #E0E0E0;
-  border: 0.1rem solid #D0D0D0;
-  color: #D0D0D0;
+  border-color: #D0D0D0;
 }
 
 .add-form__error-message {
@@ -32,8 +50,11 @@
 }
 
 .add-form__input-currency {
-  position: absolute;
-  top: 0;
-  right: 1rem;
   color: #3F3F3F;
+  padding: 0.6rem;
+  text-align: center;
+}
+
+.add-form__input-currency--disabled {
+  color: #D0D0D0;
 }
