--- a/src/components/Search/SearchForm/SearchForm.css
+++ b/src/components/Search/SearchForm/SearchForm.css
@@ -22,6 +22,11 @@
   grid-row: 2 / 2;
 }
 
+.search__wrapper-results {
+  grid-column: 2 / span 9;
+  grid-row: 2 / 2;
+}
+
 @media (min-width: 768px) {
   .search__wrapper-home {
     height: 50rem;
@@ -31,7 +36,11 @@
   .search__wrapper {
     grid-column: 2 / 5;
     grid-row: 1 / 1;
+  }
 
+  .search__wrapper-results {
+    grid-column: 1 / span 9;
+    grid-row: 2 / 2;
   }
 
   .search__header {
@@ -40,6 +49,12 @@
   .search__form {
     width: 100%;
     padding-top: 1rem;
+    margin: 0;
+  }
+
+  .search__form-results {
+    width: 100%;
+    padding-top: 2rem;
     margin: 0;
   }
 }
@@ -55,7 +70,7 @@
     padding: 2rem 0;
   }
 
-  .search__form {
+  .search__form, .search__form-results{
     width: 45rem;
     margin: 0;
     padding-top: 1rem;
