--- a/src/components/Search/SearchForm/SearchInput.css
+++ b/src/components/Search/SearchForm/SearchInput.css
@@ -18,9 +18,9 @@
 
 .search__message-error {
   text-align: center;
-  font-size: 1rem;
-  padding: 0;
-  margin: 0;
+  font-size: 1.4rem;
+  padding: 0.5rem 0 0 0 ;
+  margin: 1rem 0 0 0;
 }
 
 @media (min-width: 768px) {
@@ -31,10 +31,31 @@
     z-index: 3;
   }
 
+  .homepage-not-results .search__input-wrapper {
+    margin: 0 7rem;
+  }
+
   .search__message-error {
     font-size: 1.5rem;
   }
 }
 
 @media (min-width: 1025px) {
+  .homepage-not-results .search__input-wrapper {
+    margin: 0 1rem;
+    padding: 0;
+    border: 0.1rem solid #999;
+    z-index: 3;
+  }
+
+  .homepage-not-results .search__form-item {
+    display: block;
+    width: 100%;
+    margin: 0 auto;
+    max-height: 3.5rem;
+    border: none;
+    outline: none;
+    text-align: center;
+    padding: 1rem 0;
+  }
 }
